--- a/levenia-sim.html
+++ b/levenia-sim.html
@@ -1,283 +1,153 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Levenia Sim — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  body { margin:0; background:#f5f7fb; font-family:'Montserrat', sans-serif;}
+  .prospect-page { max-width:960px; margin:0 auto 3rem auto; padding:1.5rem 1rem; color:#1a1a1a;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  /* HERO */
+  .prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem 1.25rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
+  .prospect-name{font-family:'Archivo Black';font-size:2rem;margin:0 0 .25rem;text-transform:uppercase;}
+  .prospect-tagline{margin:0 0 .15rem;font-size:1rem;font-weight:600;}
+  .prospect-subtitle{margin:0;font-size:.9rem;opacity:.9;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
+  .prospect-grade-card{min-width:200px;padding:1rem 1.25rem;border-radius:12px;background:rgba(255,255,255,.15);
+    border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
+  .grade-label{font-size:.7rem;opacity:.8;text-transform:uppercase;}
+  .grade-score{font-family:'Archivo Black';font-size:2.2rem;margin:.15rem 0;}
+  .grade-tier{font-size:.9rem;font-weight:600;}
 
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
+  /* Recommendations */
+  .recommendation-pill{display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
+    padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
+  .pill-box{width:12px;height:12px;border-radius:3px;}
+  .pill-yellow{background:#eab308;} /* Strong Recommendation */
 
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
+  /* META */
+  .prospect-meta{display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column{flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title{font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
+  .meta-list{list-style:none;padding:0;margin:0;}
+  .meta-list li{display:flex;justify-content:space-between;padding:.28rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value{text-align:right;margin-left:1rem;}
 
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
-  }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
+  /* SECTIONS */
+  .prospect-section{background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title{font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body{font-size:.9rem;line-height:1.52;}
+  .section-list li{font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
 </style>
+</head>
 
+<body>
 <div class="prospect-page">
 
-  <!-- ============================= -->
   <!-- HERO -->
-  <!-- ============================= -->
   <section class="prospect-hero">
-    <div class="prospect-hero-main">
-      <h1 class="prospect-name">LEVENIA SIM, OLY</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Goal Keeper Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">Stanford University · Swimming &amp; Diving 🏊‍♀️ · Class of 2028</p>
+    <div>
+      <h1 class="prospect-name">Levenia Sim, OLY</h1>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Investment Banking Prospect</p>
+      <p class="prospect-subtitle">Stanford University · Swimming & Diving · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">9.0</div>
-      <div class="grade-tier">Round 2–3 Candidate</div>
-      <div class="grade-note">Olympic pedigree · elite discipline · résumé & GPA still emerging</div>
+      <div class="grade-score">91</div>
+      <div class="grade-tier">Round 1–2</div>
+
+      <div class="recommendation-pill">
+        <div class="pill-box pill-yellow"></div>
+        <div class="pill-box pill-yellow"></div>
+        <div class="pill-box pill-yellow"></div>
+        <span>Strong Recommendation</span>
+      </div>
     </div>
   </section>
 
-  <!-- ============================= -->
+
   <!-- META -->
-  <!-- ============================= -->
   <section class="prospect-meta">
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">School</span><span class="meta-value">Stanford University</span></li>
-        <li><span class="meta-key">Major</span><span class="meta-value">Economics</span></li>
-        <li><span class="meta-key">Minor</span><span class="meta-value">Data Science</span></li>
-        <li><span class="meta-key">Year</span><span class="meta-value">2028</span></li>
-        <li><span class="meta-key">Sport</span><span class="meta-value">Swimming &amp; Diving</span></li>
-        <li><span class="meta-key">Hometown</span><span class="meta-value">Spanishport, AL</span></li>
+        <li><span>School</span><span class="meta-value">Stanford University</span></li>
+        <li><span>Major</span><span class="meta-value">Economics</span></li>
+        <li><span>Minor</span><span class="meta-value">Data Science</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.3</span></li>
+        <li><span>Sport</span><span class="meta-value">Swimming & Diving</span></li>
+        <li><span>Hometown</span><span class="meta-value">Larkspur, CA</span></li>
       </ul>
     </div>
 
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">Fall Rank</span><span class="meta-value">16 / 63</span></li>
-        <li><span class="meta-key">GPA</span><span class="meta-value">3.3</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">5. Goal Keeper</span></li>
-        <li><span class="meta-key">Performance</span>
-          <span class="meta-value">
-            Lone Olympian · disciplined · reliable · résumé + GPA still developing into full IB profile
-          </span>
-        </li>
+        <li><span>Fellowship Rank</span><span class="meta-value">11 / 78</span></li>
+        <li><span>Interview #1</span><span class="meta-value">95.3%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">100%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">79.1%</span></li>
+        <li><span>Personality</span><span class="meta-value">Goal Keeper (Disciplined, Structured Execution)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Democratic Leader (Team Input, Shared Direction)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Analytical (Evidence-Based, Quality-Control Mindset)</span></li>
       </ul>
     </div>
   </section>
 
-  <!-- ============================= -->
-  <!-- OVERVIEW -->
-  <!-- ============================= -->
+
+  <!-- CONTENT -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Levenia is the lone Olympian in the Fall Diamond League class — an incredibly accomplished, globally 
-      experienced athlete whose discipline, poise, and competitive maturity stand out immediately. Representing 
-      Singapore at the **2024 Paris Olympic Games**, she brings a rare level of resilience, structure, and 
-      high-pressure experience that translates seamlessly into the Goal Keeper archetype.
-      <br><br>
-      She operates with intention and preparation — planning, organizing, and tracking progress toward her goals 
-      with a level of discipline that few students can match. Her presence in MAP reflects exactly why the 
-      program exists: her athletic pedigree and character are elite, but her résumé and academic foundation are 
-      still emerging. MAP has quickly become the *entry point* and structural support she needs to build the 
-      professional toolkit to match her Olympic background.
-      <br><br>
-      With continued exposure to technical skills, professional experience, and case-based problem solving, 
-      Levenia has the potential to evolve into one of the strongest long-term prospects in the class — her 
-      ceiling is considerably higher than her current résumé indicates.
+      Levenia is the lone Olympian in the Fall Diamond League cohort — an incredibly accomplished, globally experienced 
+      athlete whose discipline, poise, and competitive maturity stand out immediately. Representing Singapore at the 
+      <b>2024 Paris Olympic Games</b>, she brings rare resilience, structure, and high-pressure performance experience 
+      that translate seamlessly into the Goal Keeper archetype.<br><br>
+      She operates with intention and preparation — planning, organizing, and tracking her development with uncommon 
+      discipline. Her presence in MAP reflects exactly why the program exists: her athletic and character foundation are 
+      elite, while her professional toolkit is still early stage. With structured technical development and résumé growth, 
+      she has the long-term ceiling of a top-tier analyst performer.
     </p>
   </section>
 
-  <!-- ============================= -->
-  <!-- STRENGTHS -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Olympic pedigree:</strong> Competed at the 2024 Paris Olympic Games — elite discipline, resilience, and mindset.</li>
-      <li><strong>Goal Keeper discipline:</strong> Routinely sets plans, tracks goals, and builds structure around training and academics.</li>
-      <li><strong>Global experience:</strong> International competitions representing Singapore across multiple countries.</li>
-      <li><strong>Strong leadership history:</strong> Team captain + youth coaching + mentorship in multiple environments.</li>
-      <li><strong>Emerging analytical skill set:</strong> Data science minor + intro programming + early valuation exposure through MAP.</li>
-      <li><strong>High-character teammate:</strong> Consistent, humble, coachable, and low-ego — excellent cultural add.</li>
+      <li>Olympic pedigree — 2024 Paris Games representative for Singapore.</li>
+      <li>Goal Keeper discipline — systems, structure, habit development.</li>
+      <li>Global competitive background, culturally adaptable.</li>
+      <li>Leadership history as captain + youth coaching + mentorship.</li>
+      <li>Early data & analytical exposure through academic track.</li>
+      <li>High character — humble, coachable, low-ego teammate.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
-  <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>GPA and foundational coursework need to trend upward to match her elite athletic ceiling.</li>
-      <li>Résumé is still lean relative to Diamond League peers; needs additional internships or structured experiences.</li>
-      <li>Should continue developing modeling skills, valuation frameworks, and financial literacy.</li>
-      <li>Can grow confidence in professional communication and leadership outside of sports.</li>
+      <li>Continue building résumé depth through internships & projects.</li>
+      <li>GPA + foundational courses should trend upward with support.</li>
+      <li>Strengthen modeling + valuation fundamentals through MAP reps.</li>
+      <li>Increase presence & confidence in professional communication.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
-  <!-- PROJECTION -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A Round 2–3 MAP prospect with Round 1 maturity, discipline, and character. Levenia’s Olympic experience 
-      gives her a competitive advantage that cannot be taught — but her professional foundation is still in the 
-      early stages. MAP is likely to become the launching pad for her future roles, helping her build the résumé, 
-      confidence, and technical skills to match her elite athletic accomplishments.
+      A Round 1–2 MAP prospect with Round 1 maturity, discipline, and athletic pedigree. Levenia’s Olympic background gives 
+      her a competitive advantage that simply cannot be taught — and with continued technical development, internship 
+      experience, and structured résumé growth, she has the potential to grow into a truly standout analyst candidate. 
+      long-term upside is significant, positioning her as a culture-driver and high-ceiling talent within the MAP ecosystem.
     </p>
   </section>
 
 </div>
+</body>
+</html>
