--- a/katherine-malloy.html
+++ b/katherine-malloy.html
@@ -7,163 +7,41 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  body { margin:0; background:#f5f7fb; font-family:'Montserrat', sans-serif;}
+  .prospect-page { max-width:960px; margin:0 auto 3rem auto; padding:1.5rem 1rem; color:#1a1a1a;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  /* HERO */
+  .prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem 1.25rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
+  .prospect-name{font-family:'Archivo Black';font-size:2rem;margin:0 0 .25rem;text-transform:uppercase;}
+  .prospect-tagline{margin:0 0 .15rem;font-size:1rem;font-weight:600;}
+  .prospect-subtitle{margin:0;font-size:.9rem;opacity:.9;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
+  .prospect-grade-card{min-width:200px;padding:1rem 1.25rem;border-radius:12px;background:rgba(255,255,255,.15);
+    border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
+  .grade-label{font-size:.7rem;opacity:.8;text-transform:uppercase;}
+  .grade-score{font-family:'Archivo Black';font-size:2.2rem;margin:.15rem 0;}
+  .grade-tier{font-size:.9rem;font-weight:600;}
 
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
+  /* REC Pill */
+  .recommendation-pill{display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
+    padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
+  .pill-box{width:12px;height:12px;border-radius:3px;}
+  .pill-yellow{background:#eab308;}
 
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
+  /* META */
+  .prospect-meta{display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column{flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title{font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
+  .meta-list{list-style:none;padding:0;margin:0;}
+  .meta-list li{display:flex;justify-content:space-between;padding:.28rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value{text-align:right;margin-left:1rem;}
 
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
-  }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
+  /* SECTIONS */
+  .prospect-section{background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title{font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body{font-size:.9rem;line-height:1.52;}
+  .section-list li{font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
 </style>
 </head>
 
@@ -172,23 +50,28 @@
 
   <!-- HERO -->
   <section class="prospect-hero">
-    <div class="prospect-hero-main">
-      <h1 class="prospect-name">KATHERINE MALLOY</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Behind the Scenes Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">Georgetown University · Field Hockey 🏑 · Class of 2028</p>
+    <div>
+      <h1 class="prospect-name">Katherine Malloy</h1>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Investment Banking Prospect</p>
+      <p class="prospect-subtitle">Georgetown University · Field Hockey · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">8.9</div>
-      <div class="grade-tier">Round 3–4 Candidate</div>
-      <div class="grade-note">Steady, reliable contributor; quieter profile with room to grow</div>
+      <div class="grade-score">91</div>
+      <div class="grade-tier">Round 1–2</div>
+      <div class="recommendation-pill">
+        <div class="pill-box pill-yellow"></div>
+        <div class="pill-box pill-yellow"></div>
+        <div class="pill-box pill-yellow"></div>
+        <span>Strong Recommendation</span>
+      </div>
     </div>
   </section>
 
+
   <!-- META -->
   <section class="prospect-meta">
-
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
@@ -196,7 +79,8 @@
         <li><span>Major</span><span class="meta-value">Global Business</span></li>
         <li><span>Minor</span><span class="meta-value">Spanish</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
-        <li><span>Sport</span><span class="meta-value">Field Hockey 🏑</span></li>
+        <li><span>GPA</span><span class="meta-value">3.72</span></li>
+        <li><span>Sport</span><span class="meta-value">Field Hockey</span></li>
         <li><span>Hometown</span><span class="meta-value">Lake Forest, IL</span></li>
       </ul>
     </div>
@@ -204,81 +88,62 @@
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Fall Rank</span><span class="meta-value">20 / 63</span></li>
-        <li><span>GPA</span><span class="meta-value">3.72</span></li>
-        <li><span>Personality</span>
-          <span class="meta-value">
-            1. Behind the Scenes<br>
-            (Reserved Personality · Attention to Detail · Methodical Work Ethic)
-          </span>
-        </li>
-        <li><span>Leadership</span>
-          <span class="meta-value">
-            Democratic Leader<br>
-            (Team Input · Collaboration · Shared Ownership)
-          </span>
-        </li>
-        <li><span>Performance</span>
-          <span class="meta-value">
-            Reliable + on time · quiet presence · instructions followed well but résumé still developing
-          </span>
-        </li>
+        <li><span>Fellowship Rank</span><span class="meta-value">12 / 78</span></li>
+        <li><span>Interview #1</span><span class="meta-value">97.1%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">94.2%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">85.8%</span></li>
+        <li><span>Personality</span><span class="meta-value">Behind the Scenes (Reserved, Methodical)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Democratic Leader (Shared Input, Collaboration)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Detail-Oriented (Precise, Quality-Focused)</span></li>
       </ul>
     </div>
-
   </section>
 
-  <!-- OVERVIEW -->
+
+  <!-- CONTENT -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Katherine is a steady, reliable Behind the Scenes archetype who consistently delivers, stays organized, 
-      and operates with quiet professionalism. She leads by example rather than volume — observing first, gathering 
-      context, and taking thoughtful action. This creates a calming presence on teams and positions her as someone 
-      who can be trusted to execute without drama or ego.
-      <br><br>
-      Her MAP performance reflects this: assignments were submitted on time, she stayed engaged, and her work ethic 
-      never wavered. However, she remains very quiet in live settings and is unlikely to step into a leadership role 
-      without prompting. Her résumé, while solid, is not yet as competitive as many of the top-tier Diamond League 
-      prospects — which places her more firmly in the Round 3–4 range at this stage.
-      <br><br>
-      Still, Katherine’s consistency, discipline, academic strength, and bilingual communication skills give her 
-      meaningful upside. With more live-rep exposure, résumé development, and confidence in asserting her voice, 
-      she could evolve into a highly trusted, low-ego analyst in competitive business and finance pipelines.
+      Katherine is a steady, reliable Behind the Scenes archetype who consistently delivers, stays organized, and operates 
+      with quiet professionalism. She leads by example rather than volume — observing first, gathering context, and taking 
+      thoughtful action. This creates a calming presence on teams and positions her as someone who can be trusted to execute 
+      without drama or ego.<br><br>
+      Her MAP performance reflects this well: assignments were submitted on time, she remained engaged throughout the 
+      program, and her work ethic never wavered. While she remains reserved in discussion settings and her résumé is still 
+      developing relative to top Diamond League peers, her discipline, academic strength, and bilingual communication skills 
+      provide meaningful upside with continued reps.
     </p>
   </section>
 
-  <!-- STRENGTHS -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Reliable and steady:</strong> Consistently on time with assignments; disciplined follow-through.</li>
-      <li><strong>Behind the Scenes strengths:</strong> Reserved, detail-oriented, methodical work ethic.</li>
-      <li><strong>Academic strength:</strong> 3.72 GPA in Global Business with Spanish minor.</li>
-      <li><strong>Community-driven:</strong> Long-standing volunteer and youth coaching roles.</li>
-      <li><strong>Team-first mentality:</strong> Low-ego contributor; maintains discipline and role clarity.</li>
-      <li><strong>Customer-facing experience:</strong> Seasonal Nordstrom work shows poise and sales mindset.</li>
+      <li>Reliable and steady contributor — follows through consistently.</li>
+      <li>Behind the Scenes strength — methodical, thoughtful, organized.</li>
+      <li>Strong academic profile — 3.72 GPA with Spanish minor.</li>
+      <li>Community-driven — volunteer and youth coaching experience.</li>
+      <li>Team-first, low-ego profile — executes without friction.</li>
+      <li>Customer-facing experience via Nordstrom seasonal role.</li>
     </ul>
   </section>
 
-  <!-- AREAS FOR DEVELOPMENT -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Very quiet in group settings — needs practice asserting her voice in discussions.</li>
-      <li>Résumé lacks the technical depth of top Diamond League peers.</li>
-      <li>Should develop stronger storytelling and confidence in interviews.</li>
-      <li>Needs more hands-on business or finance-facing experience.</li>
+      <li>Increase vocal presence + confidence in discussions.</li>
+      <li>Add technical depth and internship experience to résumé.</li>
+      <li>Develop storytelling + structure in behavioral interviews.</li>
+      <li>Continue building finance-facing experiences/projects.</li>
     </ul>
   </section>
 
-  <!-- PROJECTION -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A Round 3–4 MAP prospect with strong reliability, academic discipline, and a low-ego,
-      team-first execution style. With additional résumé depth and greater vocal presence, she 
-      could grow into a highly dependable analyst in competitive finance and business pipelines.
+      A Round 1–2 MAP prospect by score with the current profile of a Round 3–4 trajectory player. Katherine’s reliability, 
+      discipline, and low-ego execution style make her a strong cultural addition to teams — and with increased confidence, 
+      technical development, and résumé depth, she has a clear path to becoming a dependable analyst in competitive business 
+      and finance pipelines.
     </p>
   </section>
 
