--- a/levenia-sim.html
+++ b/levenia-sim.html
@@ -82,7 +82,7 @@
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.3</span></li>
         <li><span>Sport</span><span class="meta-value">Swimming & Diving</span></li>
-        <li><span>Hometown</span><span class="meta-value">Larkspur, CA</span></li>
+        <li><span>Hometown</span><span class="meta-value">Spanishport, AL</span></li>
       </ul>
     </div>
 
